--- a/stylesheets/modules/_all.scss
+++ b/stylesheets/modules/_all.scss
@@ -1,4 +1,3 @@
-@import normalize
-@import colors
-@import typography
-@import variables
+@import "normalize";
+@import "colors";
+@import "typography";
