--- a/stylesheets/modules/_colors.scss
+++ b/stylesheets/modules/_colors.scss
@@ -1,3 +1,8 @@
-//COLORS
-// $color-primary: 
-// $color-secondary:
+//COLORS (edit)
+$color-text: #111111;
+$color-primary: #fdfdfd;
+$color-secondary: #f21010;
+$color-action: #1565c0;
+
+$color-white: #fff;
+$color-black: #000;
