--- a/stylesheets/modules/_typography.scss
+++ b/stylesheets/modules/_typography.scss
@@ -1,6 +1,17 @@
-// TYPOGRAPHY
+// TYPOGRAPHY (edit)
+$font-primary: 'Hind Guntur', sans-serif;
+$font-secondary: 'Hind Guntur', sans-serif;
 
-// $font-primary: 
-// $font-secondary:
+$base-font-size: 1em;
 
-// $font-size:
+//Line height
+$base-line-height: 1.5;
+$heading-line-height: 1.2;
+
+$base-border-radius: 3px;
+$base-spacing: $base-line-height * 1em;
+$small-spacing: $base-spacing / 2;
+
+//Animations
+$base-duration: 150ms;
+$base-timing: ease;
