--- a/stylesheets/modules/_colors.scss
+++ b/stylesheets/modules/_colors.scss
@@ -1,6 +1,6 @@
 //COLORS (edit)
 $color-text: #111111;
-$color-primary: #fdfdfd;
+$color-primary: #fb3426;
 $color-secondary: #f21010;
 $color-action: #1565c0;
 
