--- a/stylesheets/modules/_typography.scss
+++ b/stylesheets/modules/_typography.scss
@@ -1,6 +1,6 @@
 // TYPOGRAPHY (edit)
-$font-primary: 'Hind Guntur', sans-serif;
-$font-secondary: 'Hind Guntur', sans-serif;
+$font-primary: Avenir, sans-serif;
+$font-secondary: Avenir, sans-serif;
 
 $base-font-size: 1em;
 
